@@ -40,10 +40,6 @@ import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.Instant;
-import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 @Transactional
@@ -180,7 +176,7 @@ public class ReservationService {
             Member member,
             Integer price) {
 
-        Performance performance = seats.get(0).getPerformance();
+        Performance performance = seats.getFirst().getPerformance();
 
         Status paidStatus = statusRepository.findById(ReservationStatus.PAID.getId())
                 .orElseThrow(() -> new BusinessException(ErrorCode.STATUS_NOT_FOUND));
